# agent-team

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README.zh-CN.md
npm/agent-team/: install.js  package.json
npm/agent-team-darwin-arm64/: package.json
npm/agent-team-darwin-x64/: package.json
npm/agent-team-linux-x64/: package.json
npm/agent-team-win32-x64/: package.json
scripts/: build-npm.sh  publish-npm.sh
src/: lib.rs  main.rs
src/acp_client/: mod.rs  team_client.rs
src/cli/: client.rs  commands.rs  display.rs  mod.rs  update.rs
src/config/: defaults.rs  mod.rs
src/protocol/: messages.rs  transport.rs
src/session/: agent.rs  mod.rs  server.rs  server_tests.rs
tests/: integration.rs
